--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^10.7.0
   go_router: ^13.2.0
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
@@ -74,7 +69,5 @@ flutter:
     - family: Inter-VariableFont_slnt,wght
       fonts:
         - asset: assests/fonts/Inter-VariableFont_slnt,wght.ttf
-
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
