--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   flutter:
@@ -35,6 +36,7 @@ dependencies:
   flutter_bloc: ^8.1.4
   font_awesome_flutter: ^10.7.0
   go_router: ^13.2.0
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
