--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: ^13.2.0
-
+  google_fonts: ^6.1.0
+  flutter_screenutil: ^5.9.0
+  flutter_svg: ^2.0.9
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
