--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,9 +66,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Roboto-Black
+    - family: Roboto-Light
       fonts:
-        - asset: assests/fonts/Roboto-Black.ttf
+        - asset: assests/fonts/Roboto-Light.ttf
         # - asset: assests/fonts/Roboto-Light.ttf
     - family: Inter-VariableFont_slnt,wght
       fonts:
