--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,14 @@ dependencies:
   country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
+  firebase_core: ^2.24.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
   font_awesome_flutter: ^10.7.0
   go_router: ^13.2.0
   intl_phone_field: ^3.2.0
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
