--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.9
   flutter_iconly: ^1.0.2
+  google_maps_flutter: ^2.5.3
+  location: ^5.0.3
   
 dev_dependencies:
   flutter_test:
