move permission into cleanup component on tap and add panaradialog

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_iconly: ^1.0.2
   google_maps_flutter: ^2.5.3
   location: ^5.0.3
+  panara_dialogs: ^0.1.4
   
 dev_dependencies:
   flutter_test:
