--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>= 3.1.0<4.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,14 +31,18 @@ dependencies:
   country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
-  firebase_core: ^2.24.2
+  firebase_auth: ^4.17.5
+  firebase_core: ^2.25.4
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
+  flutter_facebook_auth: ^6.1.1
   font_awesome_flutter: ^10.7.0
   go_router: ^13.2.0
+  google_sign_in: ^6.2.1
   intl_phone_field: ^3.2.0
   pin_code_fields: ^8.0.1
+  sign_in_with_apple: ^5.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -82,9 +86,9 @@ flutter:
 
     - family: Poppins-ExtraBold
       fonts:
-        - asset: assests/fonts/Poppins-ExtraBold.ttf  
+        - asset: assests/fonts/Poppins-ExtraBold.ttf
     - family: Poppins-Bold
       fonts:
-        - asset: assests/fonts/Poppins-Bold.ttf       
+        - asset: assests/fonts/Poppins-Bold.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
