--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
+    id "com.google.gms.google-services"
 }
+apply plugin: 'com.android.application'
 
 apply plugin: 'com.google.gms.google-services'
 
@@ -67,4 +69,7 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation platform('com.google.firebase:firebase-bom:30.2.0')
+  implementation 'com.google.firebase:firebase-analytics'
+}
