--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   go_router: ^13.2.0
   google_sign_in: ^6.2.1
+  image_picker: ^1.0.7
   intl_phone_field: ^3.2.0
   pin_code_fields: ^8.0.1
   sign_in_with_apple: ^5.0.0
