--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.4
   flutter_facebook_auth: ^6.1.1
+  flutter_timer_countdown: ^1.0.7
   font_awesome_flutter: ^10.7.0
   go_router: ^13.2.0
   google_sign_in: ^6.2.1
