--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   pin_code_fields: ^8.0.1
   sign_in_with_apple: ^5.0.0
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_lints: ^2.0.0
