--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.4
   country_code_picker: ^3.0.0
-  linear_progress_bar: "^1.1.1"
   cupertino_icons: ^1.0.2
+  dropdown_button2: ^2.3.9
   equatable: ^2.0.5
   firebase_auth: ^4.17.5
   firebase_core: ^2.25.4
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.4
+  flutter_bloc: ^8.1.5
   flutter_facebook_auth: ^6.1.1
   flutter_timer_countdown: ^1.0.7
   font_awesome_flutter: ^10.7.0
@@ -44,9 +45,10 @@ dependencies:
   google_sign_in: ^6.2.1
   image_picker: ^1.0.7
   intl_phone_field: ^3.2.0
+  linear_progress_bar: ^1.1.1
+  modal_progress_hud_nsn: ^0.5.1
   pin_code_fields: ^8.0.1
   sign_in_with_apple: ^5.0.0
-  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_lints: ^2.0.0
