--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,10 @@ dependencies:
   bloc: ^8.1.4
   country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
-  dropdown_button2: ^2.3.9
+  
   equatable: ^2.0.5
   firebase_auth: ^4.17.5
   firebase_core: ^2.25.4
-  cupertino_icons: ^1.0.2
   dropdown_button2: ^2.3.9
   flutter:
     sdk: flutter
@@ -51,9 +50,18 @@ dependencies:
   modal_progress_hud_nsn: ^0.5.1
   pin_code_fields: ^8.0.1
   sign_in_with_apple: ^5.0.0
+  flutter_screenutil: ^5.9.3
+  google_fonts: ^6.2.0
+  flutter_svg: ^2.0.10+1
+  panara_dialogs: ^0.1.4
+  geocoding: ^3.0.0
+  google_maps_flutter: ^2.6.1
+  location: ^6.0.2
+  lottie: ^3.1.2
+  table_calendar: ^3.1.1
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -80,9 +88,9 @@ flutter:
     - assets/images/
     - assets/map_styles/dark_map_style.json
     - assets/lottie/
-
-  assets:
+    - assests/fonts/
     - assests/images/
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
@@ -111,7 +119,6 @@ flutter:
     - family: Poppins-Bold
       fonts:
         - asset: assests/fonts/Poppins-Bold.ttf
-  fonts:
     - family: Roboto
       fonts:
         - asset: assets/fonts/Inter-SemiBold.ttf
