--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,47 +28,40 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animate_do: ^3.3.4
   bloc: ^8.1.4
   country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
-  
+  dio: ^5.4.3+1
+  dropdown_button2: ^2.3.9
   equatable: ^2.0.5
   firebase_auth: ^4.17.5
   firebase_core: ^2.25.4
-  dropdown_button2: ^2.3.9
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
   flutter_facebook_auth: ^6.1.1
+  flutter_screenutil: ^5.9.3
+  flutter_svg: ^2.0.10+1
   flutter_timer_countdown: ^1.0.7
   font_awesome_flutter: ^10.7.0
+  geocoding: ^3.0.0
   go_router: ^13.2.0
+  google_fonts: ^6.2.0
+  google_maps_flutter: ^2.6.1
   google_sign_in: ^6.2.1
   image_picker: ^1.0.7
   intl_phone_field: ^3.2.0
   linear_progress_bar: ^1.1.1
-  modal_progress_hud_nsn: ^0.5.1
-  pin_code_fields: ^8.0.1
-  sign_in_with_apple: ^5.0.0
-  flutter_screenutil: ^5.9.3
-  google_fonts: ^6.2.0
-  flutter_svg: ^2.0.10+1
-  panara_dialogs: ^0.1.4
-  geocoding: ^3.0.0
-  google_maps_flutter: ^2.6.1
   location: ^6.0.2
   lottie: ^3.1.2
+  modal_progress_hud_nsn: ^0.5.1
+  panara_dialogs: ^0.1.4
+  pin_code_fields: ^8.0.1
+  sign_in_with_apple: ^5.0.0
   table_calendar: ^3.1.1
-  dio: ^5.4.3+1
 
 dev_dependencies:
-  
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
