--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   bloc: ^8.1.4
   country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
   dio: ^5.4.3+1
   dropdown_button2: ^2.3.9
   equatable: ^2.0.5
