--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_timer_countdown: ^1.0.7
   font_awesome_flutter: ^10.7.0
   geocoding: ^3.0.0
+  get_it: ^7.7.0
   go_router: ^13.2.0
   google_fonts: ^6.2.0
   google_maps_flutter: ^2.6.1
