--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   google_maps_flutter: ^2.6.1
   google_sign_in: ^6.2.1
   image_picker: ^1.0.7
+  intl: ^0.19.0
   intl_phone_field: ^3.2.0
   linear_progress_bar: ^1.1.1
   location: ^6.0.2
