--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   google_fonts: ^6.2.0
   google_maps_flutter: ^2.6.1
   google_sign_in: ^6.2.1
+  hive: ^2.2.3
   image_picker: ^1.0.7
   intl: ^0.19.0
   intl_phone_field: ^3.2.0
