--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   sign_in_with_apple: ^5.0.0
   table_calendar: ^3.1.1
   url_launcher: ^6.2.6
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
